kubernetes/apps/auth/onboard/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: onboard
  namespace: auth
  labels:
    app.kubernetes.io/name: onboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: onboard
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
